# fastauth-api

./: .gitignore  README.md  fastauth.config.example.json  fastauth.config.json  pyproject.toml  readme.md
.github/workflows/: python-publish.yml
doc/: CHANGELOG.md  WIKI.md
examples/: EXAMPLES.md
examples/apps/basic_api/: api.py  fastauth.config.json
examples/apps/custom_api/: api.py
examples/apps/websocket_api/: api.py  fastauth.config.json
examples/databases/json_database/utils/: standart_response.py
src/fastauth/: __init__.py  app.py  quick_app.py
src/fastauth/client_db/: client_db.py  client_dbt.py
src/fastauth/config/: __init__.py  logger.py  server.py
src/fastauth/middleware/: __init__.py  middleware.py  utils.py  websocket.py
src/fastauth/openapi/: __init__.py  openapi.py
src/fastauth/routers/: __init__.py  auth.py  jsondb.py
src/fastauth/utils/: __init__.py  criptografy_key.py  cryptography_key.py  decode_token.py  envfile.py
tests/: open_ws.py
tests/api/: api.py
tests/client/: api.py  client.py
tests/database/: api.py  jsondb.py
tests/database/data/: simple_db.json
tests/database/utils/: standart_response.py
