[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fastauth-api"
version = "0.0.1"
authors = [{ name = "Raúl Beltrán Gómez", email = "rb58853@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
  "fastapi",
  "websockets",
  "requests",
  "python-jose[cryptography]",
  "cryptography",
  "uvicorn",
]

[project.urls]
Homepage = "https://github.com/rb58853/fastauth-api"
Issues = "https://github.com/rb58853/fastauth-api/issues"
